<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/balance_dtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_transaction_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="onClick"
        android:text="@string/new_transaction_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/weekly_goal_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="172dp"
        android:text="@string/weekly_goal_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/weekly_goal_dtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        app:layout_constraintStart_toEndOf="@+id/weekly_goal_txt"
        app:layout_constraintTop_toTopOf="@+id/weekly_goal_txt" />

    <TextView
        android:id="@+id/weekly_expenditure_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weekly_expenditure_lbl"
        app:layout_constraintStart_toStartOf="@+id/weekly_goal_txt"
        app:layout_constraintTop_toBottomOf="@+id/weekly_goal_txt" />

    <TextView
        android:id="@+id/weekly_remaining_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weekly_remaining_lbl"
        app:layout_constraintStart_toStartOf="@+id/weekly_expenditure_txt"
        app:layout_constraintTop_toBottomOf="@+id/weekly_expenditure_txt" />

    <TextView
        android:id="@+id/weekly_expenditure_dtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/weekly_goal_dtxt"
        app:layout_constraintTop_toTopOf="@+id/weekly_expenditure_txt" />

    <TextView
        android:id="@+id/weekly_remaining_dtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/weekly_expenditure_dtxt"
        app:layout_constraintTop_toTopOf="@+id/weekly_remaining_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>